fixed layout issue with slide in images

--- a/assets/sass/views/_homepage.scss
+++ b/assets/sass/views/_homepage.scss
@@ -34,7 +34,7 @@ h1 {
       transform:translateX(-30%) scale(0.95);
     }
     .align-right.slide-in {
-      transform:translateX(30%) scale(0.95);
+      transform:translateX(25%) scale(0.95);
     }
 
     .slide-in.active {
